temira_deploy.yaml
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: temira-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: mruggeri-temira.my.kube.um.edu.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: temira-service
                port:
                  number: 80

---
# Service
apiVersion: v1
kind: Service
metadata:
  name: temira-service
  labels:
    app: temira
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8501
  selector:
    app: temira

---
# StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: temira
  labels:
    app: temira
spec:
  serviceName: "temira"
  replicas: 1
  selector:
    matchLabels:
      app: temira
  template:
    metadata:
      labels:
        app: temira
    spec:
      containers:
      - name: temira
        image: martinr2020/temira-web-analytics:latest
        ports:
        - containerPort: 8501

        volumeMounts:
        - name: ssh-keys-storage
          mountPath: /app/claves
          readOnly: true
        - name: temp-csvs-storage
          mountPath: /app/temp_csvs
        - name: temp-pdfs-storage
          mountPath: /app/temp_pdfs
        - name: temp-images-storage
          mountPath: /app/images

      volumes:
      - name: ssh-keys-storage
        secret:
          secretName: ssh-keys

  volumeClaimTemplates:
  - metadata:
      name: temp-csvs-storage
      labels:
        app: temira
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 2Gi

  - metadata:
      name: temp-pdfs-storage
      labels:
        app: temira
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 2Gi

  - metadata:
      name: temp-images-storage
      labels:
        app: temira
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 2Gi
---
